Updated docs and naming a bit. Fixed end to end to run only after everything else

--- a/java/endToEnd/build.gradle
+++ b/java/endToEnd/build.gradle
@@ -91,7 +91,9 @@ task finalComposeDown(type: Exec) {
     commandLine "docker", "compose", "down"
 }
 composeUp.dependsOn logDir, preTestComposeDown,
-        ':control:installDist', ':node:installDist', ":proxy:installDist"
+        ':control:test', ':node:test', ':proxy:test',
+        ':control:integ', ':node:integ',
+        ':control:installDist', ':node:installDist', ':proxy:installDist'
 
 integ {
     enabled = false
