Forced integ tests to run serial

--- a/java/control/build.gradle
+++ b/java/control/build.gradle
@@ -69,3 +69,4 @@ task dockerImage(type: Exec) {
     commandLine "docker", "build", "-t", "svarm/control:${version}", "."
 }
 dockerImage.dependsOn installDist
+integ.dependsOn('test')
