--- a/java/node/build.gradle
+++ b/java/node/build.gradle
@@ -76,3 +76,5 @@ task dockerImage(type: Exec) {
     commandLine "docker", "build", "-t", "svarm/node:${version}", "."
 }
 dockerImage.dependsOn installDist
+
+integ.dependsOn('test', ':control:integ')
