Simplified build project by move integ test to just adding integ test tags.
There was extra time taken by the integ task on projects with no integ tests.
Instead, switched to a property to enable integ tests like I did for end to end
tests. Also, made it so the end to end tests only wire in if the e2e property
is set. Before, gradle was executing integ tests due to dependency chain even
if neither integ nor end to end tests were going to run.

--- a/java/build.gradle
+++ b/java/build.gradle
@@ -160,11 +160,12 @@ allprojects {
         }
     }
 
-    tasks.named('test') {
-        useJUnitPlatform { excludeTags 'integ' }
-    }
-    def integ = tasks.register("integ", Test) {
-        useJUnitPlatform { includeTags "integ" }
+    test {
+        useJUnitPlatform {
+            if (!project.hasProperty('integ')) {
+                excludeTags 'integ'
+            }
+        }
     }
 }
 
