--- a/java/node/build.gradle
+++ b/java/node/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation libs.jdbi.testing
     implementation libs.jdbi.guava
     implementation libs.jdbi.jackson2
+    implementation libs.jdbi.sqlobject
 
     // etcd
     implementation libs.jetcd.core
