Update to use new datastore common and simplify node

--- a/java/node/build.gradle
+++ b/java/node/build.gradle
@@ -19,6 +19,7 @@ configurations {
 
 dependencies {
     implementation project(":common")
+    implementation project(':dataStore-common')
     implementation project(":common-javaClient")
     implementation project(":server-common")
     implementation project(":config-common")
