--- a/java/server-common/build.gradle
+++ b/java/server-common/build.gradle
@@ -37,5 +37,10 @@ dependencies {
     implementation libs.logback.core
     implementation libs.logback.access
 
+    // from the BOM of dropwizard... need to pull this fro the dropwizard4-dependencies bom at some point
+    // api(platform(libs.dropwizard4.dependencies))
+    api 'org.eclipse.jetty:jetty-alpn-conscrypt-server:11.0.13'
+    //api 'org.eclipse.jetty:jetty-alpn-conscrypt-server'
+
 }
 
