--- a/java/endToEnd/src/test/resources/control-config.yaml
+++ b/java/endToEnd/src/test/resources/control-config.yaml
@@ -22,6 +22,9 @@ database:
   user: control
   password: control
   url: jdbc:postgresql://database:5432/control?sslmode=disable
+#  initialSize: 1
+#  minSize: 1
+#  maxSize: 1
 
 etcdConfiguration:
   target: ip:///etcd:2379
