Prep for gradle 9

--- a/java/config-common/build.gradle
+++ b/java/config-common/build.gradle
@@ -9,8 +9,12 @@ ext {
 }
 
 configurations {
-    project.archivesBaseName = "${appName}"
     jar.archiveBaseName = "${appName}"
+}
+
+base {
+    archivesName = "${appName}"
+    version = "${version}"
 }
 
 //jacocoTestReport.finalizedBy jacocoTestCoverageVerification
