--- a/java/node/build.gradle
+++ b/java/node/build.gradle
@@ -11,10 +11,13 @@ ext {
 }
 
 configurations {
-    project.archivesBaseName = "${appName}"
     jar.archiveBaseName = "${appName}"
 }
 
+base {
+    archivesName = "${appName}"
+    version = "${version}"
+}
 //jacocoTestReport.finalizedBy jacocoTestCoverageVerification
 
 dependencies {
