--- a/java/control/build.gradle
+++ b/java/control/build.gradle
@@ -10,9 +10,9 @@ ext {
     configPath = "${rootProject.projectDir}/control/src/main/resources/"
 }
 
-configurations {
-    project.archivesBaseName = "${appName}"
-    jar.archiveBaseName = "${appName}"
+base {
+    archivesName = "${appName}"
+    version = "${version}"
 }
 
 //jacocoTestReport.finalizedBy jacocoTestCoverageVerification
