--- a/java/node/build.gradle
+++ b/java/node/build.gradle
@@ -72,9 +72,12 @@ dependencies {
 
 }
 
+application {
+    mainClass.set("org.svarm.node.Node")
+}
+
 run {
     args 'server', configPath + 'config.yaml'
-    mainClassName = "org.svarm.node.Node"
 }
 
 task dockerImage(type: Exec) {
