--- a/java/local-queue/build.gradle
+++ b/java/local-queue/build.gradle
@@ -4,7 +4,7 @@
  */
 
 ext {
-    appName = "queue"
+    appName = "local-queue"
 }
 
 configurations {
@@ -19,9 +19,19 @@ base {
 //jacocoTestReport.finalizedBy jacocoTestCoverageVerification
 
 dependencies {
+    // SQL
+    implementation libs.liquibase.core
+    implementation libs.jdbi.core
+    implementation libs.jdbi.testing
+    implementation libs.jdbi.sqlobject
+
     // Logging stuff... need all these for logback changes
     implementation libs.logback.classic
     implementation libs.logback.core
     implementation libs.logback.access
 }
-
+testing {
+    dependencies {
+        implementation libs.hsqldb
+    }
+}
