Made the hash function generic

--- a/java/local-queue/build.gradle
+++ b/java/local-queue/build.gradle
@@ -19,6 +19,7 @@ base {
 //jacocoTestReport.finalizedBy jacocoTestCoverageVerification
 
 dependencies {
+    implementation libs.guava // for hashing
     // SQL
     implementation libs.liquibase.core
     implementation libs.jdbi.core
