Simplification while adding queue processor.
Also updated so we have the queue configuration optional defined.

--- a/java/local-queue/build.gradle
+++ b/java/local-queue/build.gradle
@@ -20,6 +20,7 @@ base {
 
 dependencies {
     implementation libs.guava // for hashing
+    implementation libs.dropwizard4.core
     // SQL
     implementation libs.liquibase.core
     implementation libs.jdbi.core
