--- a/java/node/build.gradle
+++ b/java/node/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation project(":node-common")
     implementation project(":control-common")
     implementation project(":control-javaClient")
+    implementation project(":local-queue")
 
     // SQL
     implementation libs.hsqldb
