Added metrics to the queue

--- a/java/local-queue/build.gradle
+++ b/java/local-queue/build.gradle
@@ -21,6 +21,7 @@ base {
 dependencies {
     implementation libs.guava // for hashing
     implementation libs.dropwizard4.core
+    api libs.micrometer.core
     // SQL
     implementation libs.liquibase.core
     implementation libs.jdbi.core
