--- a/java/settings.gradle
+++ b/java/settings.gradle
@@ -24,7 +24,7 @@ dependencyResolutionManagement {
 }
 
 // All subprojects we want to build.
-include ':the-ring', ':local-queue',
+include ':the-ring', ':local-queue', ':liquibase-common',
         ':common', ':server-common', ':common-javaClient', ':config-common',
         ':dataStore-common',
         ':node-common', ':node-javaClient', ':node',
