--- a/java/node/src/main/resources/docker-node-config.yaml
+++ b/java/node/src/main/resources/docker-node-config.yaml
@@ -1,6 +1,6 @@
 databaseDirectory: /server/work
 runDatabaseInMemory: false
-controlPlaneUrl: http://control:8080/
+controlPlaneUrl: https://control:8080/
 nodePort: 8080
 
 logging:
