--- a/java/endToEnd/compose.yaml
+++ b/java/endToEnd/compose.yaml
@@ -57,7 +57,7 @@ services:
       database:
         condition: service_healthy
     healthcheck:
-      test: curl --fail http://localhost:8081/healthcheck || exit 1
+      test: curl -k --fail https://localhost:8081/healthcheck || exit 1
       timeout: 2s
       interval: 2s
       retries: 10
