Now just need to get the clients to ignore trust chain failure for testing

--- a/java/endToEnd/src/test/resources/control-config.yaml
+++ b/java/endToEnd/src/test/resources/control-config.yaml
@@ -54,7 +54,7 @@ server:
       keyStorePassword: password
       trustStorePath: /server/cacerts.jks
       trustStorePassword: password
-      certAlias: svarm
+      certAlias: control
       validateCerts: false
       disableSniHostCheck: true  # Work with docker hosts
   adminConnectors:
@@ -67,7 +67,7 @@ server:
       keyStorePassword: password
       trustStorePath: /server/cacerts.jks
       trustStorePassword: password
-      certAlias: svarm
+      certAlias: control
       validateCerts: false
       disableSniHostCheck: true  # Work with docker hosts
 
