--- a/java/common-javaClient/build.gradle
+++ b/java/common-javaClient/build.gradle
@@ -26,6 +26,9 @@ dependencies {
     implementation libs.dagger
     annotationProcessor libs.dagger.compiler
 
+    api(platform(libs.okhttp.bom))
+    api("com.squareup.okhttp3:okhttp")
+
     implementation libs.jackson.annotations
     implementation libs.jackson.core
     implementation libs.jackson.databind
@@ -43,6 +46,7 @@ dependencies {
     implementation libs.openfeign.java11
     implementation libs.openfeign.jaxrs2
     implementation libs.openfeign.jakarta
+    api libs.openfeign.okhttp
 
     implementation libs.retrofit
     implementation libs.retrofit2.converter.jackson
