--- a/java/common-javaClient/build.gradle
+++ b/java/common-javaClient/build.gradle
@@ -26,8 +26,6 @@ dependencies {
     implementation libs.dagger
     annotationProcessor libs.dagger.compiler
 
-    api(platform(libs.okhttp.bom))
-    api("com.squareup.okhttp3:okhttp")
 
     implementation libs.jackson.annotations
     implementation libs.jackson.core
@@ -39,14 +37,17 @@ dependencies {
     implementation libs.dropwizard4.metrics.graphite
     implementation libs.metrics.core
 
-    implementation libs.openfeign.core
-    implementation libs.openfeign.jackson
-    implementation libs.feign.slf4j
-    implementation libs.feign.micrometer
-    implementation libs.openfeign.java11
-    implementation libs.openfeign.jaxrs2
-    implementation libs.openfeign.jakarta
+    api libs.openfeign.core
+    api libs.openfeign.jackson
+    api libs.feign.slf4j
+    api libs.feign.micrometer
+    api libs.openfeign.java11
+    api libs.openfeign.jaxrs2
+    api libs.openfeign.jakarta
     api libs.openfeign.okhttp
+
+    api(platform(libs.okhttp.bom))
+    api("com.squareup.okhttp3:okhttp")
 
     implementation libs.retrofit
     implementation libs.retrofit2.converter.jackson
