Added most of http/2 support

--- a/java/endToEnd/src/test/resources/node-config.yaml
+++ b/java/endToEnd/src/test/resources/node-config.yaml
@@ -2,6 +2,7 @@ databaseDirectory: /tmp/endToEnd
 runDatabaseInMemory: false
 controlPlaneUrl: https://control:8080/
 nodePort: 8080
+useTestJavaClient: true
 
 logging:
   level: INFO
