--- a/java/common-javaClient/build.gradle
+++ b/java/common-javaClient/build.gradle
@@ -48,6 +48,7 @@ dependencies {
 
     api(platform(libs.okhttp.bom))
     api("com.squareup.okhttp3:okhttp")
+    api("org.apache.httpcomponents:httpclient:4.5.12")
 
     implementation libs.retrofit
     implementation libs.retrofit2.converter.jackson
