HTTP/2 is in the HOUSE

--- a/java/endToEnd/compose.yaml
+++ b/java/endToEnd/compose.yaml
@@ -71,6 +71,7 @@ services:
       - back-tier
     volumes:
       - ../node/build/install/node:/node
+      - ../config/certs:/server
       - ./src/test/resources:/config
       - logs:/tmp/logs
     command: [ "/node/bin/node", "server", "/config/node-config.yaml" ]
@@ -80,7 +81,7 @@ services:
       control:
         condition: service_healthy
     healthcheck:
-      test: curl --fail http://localhost:8081/healthcheck || exit 1
+      test: curl -k --fail https://localhost:8081/healthcheck || exit 1
       timeout: 2s
       interval: 2s
       retries: 10
@@ -94,6 +95,7 @@ services:
       - back-tier
     volumes:
       - ../proxy/build/install/proxy:/proxy
+      - ../config/certs:/server
       - ./src/test/resources:/config
       - logs:/tmp/logs
     command: [ "/proxy/bin/proxy", "server", "/config/proxy-config.yaml" ]
@@ -103,7 +105,7 @@ services:
       control:
         condition: service_healthy
     healthcheck:
-      test: curl --fail http://localhost:8081/healthcheck || exit 1
+      test: curl -k --fail https://localhost:8081/healthcheck || exit 1
       timeout: 2s
       interval: 2s
       retries: 10
