--- a/java/endToEnd/src/test/resources/node-config.yaml
+++ b/java/endToEnd/src/test/resources/node-config.yaml
@@ -2,6 +2,7 @@ databaseDirectory: /tmp/endToEnd
 runDatabaseInMemory: false
 controlPlaneUrl: https://control:8080/
 nodePort: 8080
+nodeScheme: https
 useTestJavaClient: true
 
 logging:
@@ -40,11 +41,31 @@ server:
   adminContextPath: /
   applicationContextPath: /
   applicationConnectors:
-    - type: http
+    - type: h2
+      jceProvider: Conscrypt
       port: 8080
+      maxConcurrentStreams: 1024
+      initialStreamRecvWindow: 65535
+      keyStorePath: /server/keystore.jks
+      keyStorePassword: password
+      trustStorePath: /server/cacerts.jks
+      trustStorePassword: password
+      certAlias: node
+      validateCerts: false
+      disableSniHostCheck: true  # Work with docker hosts
   adminConnectors:
-    - type: http
+    - type: h2
       port: 8081
+      jceProvider: Conscrypt
+      maxConcurrentStreams: 1024
+      initialStreamRecvWindow: 65535
+      keyStorePath: /server/keystore.jks
+      keyStorePassword: password
+      trustStorePath: /server/cacerts.jks
+      trustStorePassword: password
+      certAlias: node
+      validateCerts: false
+      disableSniHostCheck: true  # Work with docker hosts
 
 etcdConfiguration:
   target: ip:///etcd:2379
