--- a/java/compose.yaml
+++ b/java/compose.yaml
@@ -1,6 +1,7 @@
 services:
   etcd:
-    image: quay.io/coreos/etcd
+    image: quay.io/coreos/etcd:v3.5.11
+    # https://quay.io/repository/coreos/etcd?tab=tags
     ports:
       - 2379:2379
     volumes:
