Finished testing the etc lookup manager

--- a/java/feature-flag/build.gradle
+++ b/java/feature-flag/build.gradle
@@ -24,5 +24,7 @@ dependencies {
     implementation libs.logback.classic
     implementation libs.logback.core
     implementation libs.logback.access
+    testImplementation libs.jetcd.core
+    testImplementation libs.jetcd.test
 }
 
