--- a/java/node/build.gradle
+++ b/java/node/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation project(":control-common")
     implementation project(":control-javaClient")
     implementation project(":local-queue")
+    implementation project(":feature-flag")
 
     // SQL
     implementation libs.hsqldb
