--- a/java/server-common/build.gradle
+++ b/java/server-common/build.gradle
@@ -17,6 +17,10 @@ base {
     version = "${version}"
 }
 
+repositories {
+    mavenCentral()
+}
+
 //jacocoTestReport.finalizedBy jacocoTestCoverageVerification
 
 dependencies {
@@ -26,6 +30,7 @@ dependencies {
     implementation "com.google.code.findbugs:jsr305:+"
 
     api platform(libs.dropwizard4.dependencies)
+    api platform(libs.dropwizard4.bom)
     api libs.dropwizard4.auth
     api libs.dropwizard4.core
     api libs.dropwizard4.jackson
@@ -46,11 +51,7 @@ dependencies {
     implementation libs.logback.core
     implementation libs.logback.access
 
-    // from the BOM of dropwizard... need to pull this fro the dropwizard4-dependencies bom at some point
-    // api(platform(libs.dropwizard4.dependencies))
-    // api 'org.eclipse.jetty:jetty-alpn-conscrypt-server'
-    // We want the result of the above to be this, but it's not working
-    api 'org.eclipse.jetty:jetty-alpn-conscrypt-server:11.0.13'
-
+    // from the BOM of dropwizard...
+    api 'org.eclipse.jetty:jetty-alpn-conscrypt-server'
 }
 
